Fix background color and body overlap

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     font-stretch: 75% 125%;
 }
 
-.root {
+:root {
     --background-color: rgb(250, 250, 250);
 }
 
@@ -21,6 +21,8 @@ body {
     /* define max content width but allow header to inherit both properties */
     max-width: 960px;
     width: 100%;
+    padding-top: 60px;
+    padding-bottom: 80px;
 
     background-color: var(--background-color);
 }
@@ -97,7 +99,7 @@ footer {
     bottom: 0px;
     max-width: inherit;
     width: inherit;
-    /*    min-height: 70px; */
+    
     z-index: 999;
 
     background-color: var(--background-color);
